[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "z_rl"
version = "0.0.1"
keywords = ["reinforcement-learning", "robotics"]
maintainers = [
  { name="Siyuan Wang", email="syw@mail.sustech.edu.cn" },
]
authors = [
  { name="Clemens Schwarke (RSL-RL)", email="cschwarke@ethz.ch" },
  { name="Mayank Mittal (RSL-RL)", email="mittalma@ethz.ch" },
  { name="Nikita Rudin (RSL-RL)", email="rudinn@ethz.ch" },
  { name="David Hoeller (RSL-RL)", email="holler.david78@gmail.com" },
  { name="Siyuan Wang", email="syw@mail.sustech.edu.cn" },
]
description = "Fast and simple RL algorithms implemented in PyTorch"
readme = { file = "README.md", content-type = "text/markdown" }
license = "BSD-3-Clause"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.5.0",
    "tensordict>=0.7.0",
    "numpy>=1.16.4",
    "GitPython",
    "onnx",
    "onnxscript>=0.5.4",
]

[project.urls]
Homepage = "https://github.com/syw-robotics/z_rl"
Issues = "https://github.com/syw-robotics/z_rl/issues"

[project.scripts]
z-rl-plugin-init = "z_rl.cli.plugin_template:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["z_rl*", "adaptor*"]

[tool.setuptools]
license-files = [
    "LICENSE*",
    "licenses/dependencies/*.txt",
]

[tool.pyright]
include = ["z_rl"]
typeCheckingMode = "basic"
pythonVersion = "3.9"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true
# This is required as the CI pre-commit does not download the module (i.e. numpy, torch, prettytable)
reportMissingImports = "none"
# This is required to ignore type checks of modules with stubs missing.
reportMissingModuleSource = "none"  # -> most common: prettytable in mdp managers
reportGeneralTypeIssues = "none"  # -> usage of literal MISSING in dataclasses
reportOptionalMemberAccess = "none"
reportPrivateUsage = "warning"
